# volumize

./: .editorconfig  .gitignore  INSTALL.md  LICENSE  README.md  biome.json  build.js  config.txt  index.html  package-lock.json  package.json  tracker.md  tsconfig.json  tsconfig.node.json  tsup.config.ts  vite.config.ts
dev_script/: bitmap.js  copy.js  index.js  replace.js
dev_script/server/: index.js
src/: App.tsx  index.ts  log.ts  main.tsx  volumeController.ts  volumeManager.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/build_helper/: mod.rs  sign.rs
src-tauri/capabilities/: default.json
src-tauri/helper-win32/: Cargo.toml  build.rs
src-tauri/helper-win32/.cargo/: config.toml
src-tauri/helper-win32/src/: embedded.rs  firewall.rs  formatter.rs  main.rs  my_exit_code.rs  network.rs
src-tauri/helper-win32/src/win32/: apply_rule.rs  firewall.rs  mod.rs  windows.rs
src-tauri/icons/: icon.icns
src-tauri/src/: VolumeController.rs  commands.rs  lib.rs  logger.rs  main.rs  storage.rs  tray.rs  volume_control.rs
src-tauri/src/linux/: application_volume.rs  device_control.rs  linux.rs  master_volume.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/generic/: application_volume.rs  device_control.rs  master_volume.rs  mod.rs
src-tauri/src/platform/win32/: application_volume.rs  com_scope.rs  convert.rs  device_control.rs  embedded.rs  icon.rs  master_volume.rs  mod.rs  sign.rs  update.rs
src-tauri/src/platform/win32/util/: mod.rs  process.rs  pstring.rs  read_title.rs
src-tauri/src/server/: handle.rs  incoming.rs  mod.rs  service_discovery.rs  service_register.rs  volume_control.rs
src-tauri/src/setup/: desktop.rs  menu_event.rs  mod.rs  setup.rs  system_tray.rs
src-tauri/src/types/: click.rs  mod.rs  shared.rs  storage.rs  tray.rs  volume.rs
src-tauri/src/win32/: application_volume.rs  com_scope.rs  convert.rs  device_control.rs  icon.rs  master_volume.rs  mod.rs  util.rs  volume_controller_trait.rs  windows.rs
src-tauri/src/win32/util/: mod.rs  pkey_value.rs  process.rs
src-tauri/windows/: firewall.nsh
src-tauri/windows/fragments/: firewall.wxs
src-tauri/wix/: firewall.wxs
src/base/appLogo/: index.module.less  index.tsx
src/base/bouncyTitle/: index.module.less  index.tsx
src/base/button/: index.module.less  index.tsx
src/base/cardIcon/: index.module.less  index.tsx
src/base/collapseButton/: index.module.less  index.tsx
src/base/input/: index.module.less  index.tsx
src/base/notice/: index.module.less  index.tsx
src/base/slider/: index.module.less  index.tsx  marker.tsx
src/base/toggleMuteIcon/: index.module.less  index.tsx
src/bridge/: debounced.ts  generic.ts  tauri_volume.ts  type.ts  volumeManager.ts  websocket.ts  websocket_volume.ts
src/components/: log.ts  shell.ts  volumeController.ts  volumeManager.ts
src/components/applicationDevice/: index.tsx
src/components/audioMixer/: index.module.less  index.tsx
src/components/button/: index.module.less  index.tsx
src/components/card/: index.module.less  index.tsx
src/components/container/: index.module.less  index.tsx
src/components/device/: index.tsx
src/components/deviceMaster/: index.tsx
src/components/heartbeat/: index.tsx
src/components/mainContent/: index.module.less  index.tsx
src/components/navbar/: index.module.less  index.tsx
src/components/serverInput/: index.module.less  index.tsx
src/components/serverLoading/: index.module.less  index.tsx
src/components/sidebar/: index.module.less  index.tsx
src/components/slider/: index.module.less  index.tsx
src/components/toggleMuteIcon/: index.module.less  index.tsx
src/components/utils/: generic.ts  type.ts
src/controllers/: linux.ts  windows.ts
src/css/: core.less  font-faces.less  index.less
src/hooks/: proxyStorageAtom.ts  useAsyncSignalEffect.ts  useDetectOverflowX.ts  useElementFocusedWithin.ts  useGenerateID.ts  useHTMLSizing.ts  useLogout.ts  useNavbar.ts  useOverflowAmount.ts  usePreCacheImage.ts  useRefreshable.ts  useURLObjectIcon.ts  useWebsocket.ts
src/models/: nav.ts  server_url.ts  volume.ts
src/pages/home/: index.module.less  index.tsx
src/pages/navbar/: index.module.less  index.tsx
src/pages/settings/: index.module.less  index.tsx
src/types/: constant.ts  enum_type.d.ts  generic.d.ts  navigation.ts  update.ts  volume.d.ts  volume.ts
src/utils/: debounce.ts  fake.ts  generic.ts  iterable.ts  react.ts  serialize.ts  temp.ts  type.ts  uuid.ts  volume.ts  volumeType.ts  windows.ts
types/: binary.d.ts
