[package]
name = "volumize"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "volumize_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-os = "2.3.2"
tauri-plugin-websocket = "2.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.12"
ctrlc = "3.5.1"
futures-util = "0.3.31"
uuid = { version = "1.18.1", features = ["v4"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.27"
tokio-util = "0.7.16"
mdns-sd = "0.15.1"
local-ip-address = "0.6.5"
socket2 = "0.6.1"
image = "0.25.9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_ProcessStatus",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
] }
