[package]
name = "volumize"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "volumize_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-websocket = "2.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
ctrlc = "3.5.2"
futures-util = "0.3.32"
uuid = { version = "1.23.0", features = ["v4"] }
tokio = { version = "1.51.1", features = ["full"] }
tokio-tungstenite = "0.29"
tokio-util = "0.7.18"
mdns-sd = "0.19.0"
local-ip-address = "0.6.11"
socket2 = "0.6.3"
image = "0.25.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_ProcessStatus",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
] }
windows-core = "0.61.2"

