[package]
name = "helper-win32"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "helper"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
windows_firewall = { version = "0.7.0" }
windows = { version = "0.62.2", features = [
    # Checking elevation
    "Win32_Security",
    "Win32_System_Threading",
    # Checking Network
    "Win32_Networking",
    "Win32_Networking_NetworkListManager",
    # ShellExecuteW
    "Win32_UI",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    # Local time
    "Win32_System_SystemInformation",
    "Win32_System_Time",
] }